--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
 </head>
 <body>
     
-    <p>This is first paragraph</p>
-    <h2>Heading 2</h2>
-    <h3>New to the Web</h3>
+<h1>Class 1</h1>
 </body>
 </html>
