--- a/index.html
+++ b/index.html
@@ -7,7 +7,55 @@
     <title>Document</title>
 </head>
 <body>
-    
-<h1>Class 1</h1>
+    <h2>Table</h2>
+    <table border="1px">
+        <thead>
+            <th>Name</th>
+            <th>Roll no</th>
+            <th>Section</th>
+        </thead>
+        <tbody>
+        <tr>
+            <td>Ahmad</td>
+            <td>219</td>
+            <td>C</td>
+        </tr>
+        <tr>
+            <td>Shams</td>
+            <td>111</td>
+            <td>B</td>
+        </tr>
+        </tbody>
+    </table>
+ <br>
+ <br>
+ <h2>Form</h2>
+ <form>
+     <label for="username">User Name:</label><input type="text" name="username" id="username" />
+     <label for="email">Email:</label><input type="text" name="email" id="email" />
+     <label for="password">Password:</label><input type="password" name="password" id="password" />
+     <br>
+     <br>
+     <br>
+     <label for="it">Information Technology:</label><input type="radio" name="subject" id="it" value="it"/>
+     <label for="cs">Computer Science:</label><input type="radio" name="subject" id="cs" value="cs" />
+     <br>
+     <br>
+     <label for="p">programing:</label><input type="checkbox" name="p" id="p" />
+     <label for="d">Designing:</label><input type="checkbox" name="d" id="d" />
+<br>
+<br>
+<br>
+     <select>
+         
+     <option>----please select---</option>
+     <option value="day">Day</option>
+     <option value="night">Night</option>
+ </select>
+ <br>
+ <br>
+ <input type="button" value="Submit" id="submit" />
+    </form>
+
 </body>
 </html>
