basic style added

--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./style.css"  >
 </head>
 <body>
-    <h2>Table</h2>
+    <h2 id="t" >Table</h2>
     <table border="1px">
         <thead>
             <th>Name</th>
@@ -29,7 +30,7 @@
     </table>
  <br>
  <br>
- <h2>Form</h2>
+ <h2 id="f">Form</h2>
  <form>
      <label for="username">User Name:</label><input type="text" name="username" id="username" />
      <label for="email">Email:</label><input type="text" name="email" id="email" />
